fix mainpage navbar overlap, updated logo link to react

--- a/frontend/src/components/nav/navbar.css
+++ b/frontend/src/components/nav/navbar.css
@@ -1,13 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 
 .navbar{
-    display: flex;
-    justify-content: space-between;
     font-size: 2vh;
     background-color: #e4a576;
-    padding: 5vh;
+    padding: 3vw;
+    padding-top: 0px;
     text-transform: uppercase;
-    box-shadow: 0px 0px 50px 4px rgba(0,0,0,0.42);
 }
 
 /* Link tag === a tag */
